--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,23 @@
     <title>INSPINIA | Responsive Admin Theme</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="/styles.css" rel="stylesheet">
+
+    <link href="styles.css" rel="stylesheet">
+
+
 
   </head>
   <body>
     <div id="root">
     </div>
-    <script src="/vendor.js"></script>
-    <script src="/bundle.js"></script>
+
+
+    <script src="vendor.js"></script>
+    <script src="bundle.js"></script>
   </body>
+  <script>
+
+    </script>
+
+
 </html>
