resolving webpack issues

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link href="styles.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
 
 
 
@@ -16,12 +16,10 @@
     </div>
 
 
-    <script src="vendor.js"></script>
-    <script src="bundle.js"></script>
+    <script src="/vendor.js"></script>
+    <script src="/bundle.js"></script>
   </body>
-  <script>
 
-    </script>
 
 
 </html>
